k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-portal-ingress
  namespace: student-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: student-portal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 8001
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 8001
      - path: /api/courses
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 8000
      - path: /api/enrollments
        pathType: Prefix
        backend:
          service:
            name: enrollment-service
            port:
              number: 8002
